--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "exercise1": "node src/exercise1.js",
+    "exercise2": "node src/exercise2.js"
+  },
   "dependencies": {
     "nodemailer": "^6.7.8"
   }
